[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zmapsdk"
version = "0.1.2"
description = "Python SDK for the ZMap network scanner"
readme = "README.md"
authors = [
    {name = "Happy Hacking Space", email = "contact@happyhacking.space"}
]
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Networking",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "netifaces>=0.11.0",
    "click (>=8.1.8,<9.0.0)",
    "tomli (>=2.0.1,<3.0.0)",
    "tomlkit (>=0.13.2,<0.14.0)",
    "httpx (>=0.28.1,<0.29.0)",


]

[project.urls]
Repository = "https://github.com/HappyHackingSpace/ZmapSDK"

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "pyupgrade>=3.19.1",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "pytest-sugar (>=1.0.0,<2.0.0)",
    "pre-commit>=3.6.0",
    "sphinx (==8.0.0)",
    "sphinx-autoapi (>=3.6.0,<4.0.0)",
    "sphinx-autobuild (>=2024.10.3,<2025.0.0)",
    "sphinx-rtd-theme (>=3.0.2,<4.0.0)",
]
